--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
-    "sharp": "^0.33.0"
+    "sharp": "^0.33.0",
+    "uniqid": "^5.4.0"
   }
 }
