--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
+    "react-helmet-async": "^2.0.4",
     "react-icons": "^4.12.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
