--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-fast-marquee": "^1.6.2",
     "react-helmet-async": "^2.0.4",
     "react-icons": "^4.12.0",
+    "react-img-zoom": "^0.1.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.21.0"
   },
